--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(185, 56, 56);
+    background-color: rgb(0, 0, 0);
     text-align: center;
 }
 
@@ -11,7 +11,7 @@ h1 {
     font-style: italic;
 }
 .morango{
-    color:darkred
+    color:rgb(0, 0, 0)
     font-size: 20px
 }
 .img1{
